Fixed card wrap property.

--- a/styles/style.css
+++ b/styles/style.css
@@ -164,6 +164,7 @@
 .lots__card-list {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     margin-top: 27px;
     list-style-type: none;
 }
